[Fix][Add]: MessageList & Chat- now contents aligned with each other and added close button function for ChatBox

--- a/src/Components/HomePage/ChatBox/index.css
+++ b/src/Components/HomePage/ChatBox/index.css
@@ -71,3 +71,8 @@
   top: 5%;
 }
 
+.input-box {
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+}
