--- a/src/Components/HomePage/NavBar/MessageList/index.css
+++ b/src/Components/HomePage/NavBar/MessageList/index.css
@@ -1,8 +1,25 @@
+.convo-list-container {
+  min-width: 270px;
+  height: 50px;
+  position: relative;
+}
+
+.convo-container {
+  overflow: auto;
+  height: 100%;
+  position: relative;
+}
+
 .message-pic {
-  margin-top: 10px;
+  position: absolute;
   width: 33px;
-  margin-right: 8px;
-  margin-left: 16px;
   border-radius: 50%;
   border: 1px solid #00cec9;
+  top: 17%;
+}
+
+.msg-subs {
+  position: absolute;
+  top: 30%;
+  left: 15%;
 }
